// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`register -- GET /register/verify-email/:id do not verifyEmail (id does not exist) 1`] = `
Object {
  "body": Object {
    "error": "api.verifyEmail tokenId does_not_exist",
  },
  "status": 400,
}
`;

exports[`register -- GET /register/verify-email/:id do not verifyEmail (id is null) 1`] = `
Object {
  "body": Object {
    "error": "api.verifyEmail tokenId does_not_exist",
  },
  "status": 400,
}
`;

exports[`register -- GET /register/verify-email/:id do not verifyEmail (no id) 1`] = `
Object {
  "body": Object {},
  "status": 404,
}
`;

exports[`register -- GET /register/verify-email/:id do verifyEmail 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`register -- GET /register/verify-email/:id do verifyEmail 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": null,
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 1,
  },
]
`;

exports[`register -- GET /register/verify-email/:id do verifyEmail 3`] = `Array []`;

exports[`register -- POST /register do not register (bad email) 1`] = `
Object {
  "body": Object {
    "error": "api.register email is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (bad email) 2`] = `Array []`;

exports[`register -- POST /register do not register (bad password) 1`] = `
Object {
  "body": Object {
    "error": "api.register password is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (bad password) 2`] = `Array []`;

exports[`register -- POST /register do not register (email already exist) 1`] = `
Object {
  "body": Object {
    "error": "api.register  'user.email' already_exist",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (email already exist) 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`register -- POST /register do not register (nickname already exist) 1`] = `
Object {
  "body": Object {
    "error": "api.register  'user.nickname' already_exist",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (nickname already exist) 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test1.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`register -- POST /register do not register (no email) 1`] = `
Object {
  "body": Object {
    "error": "api.register email is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (no email) 2`] = `Array []`;

exports[`register -- POST /register do not register (no firstname) 1`] = `
Object {
  "body": Object {
    "error": "api.register firstname is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (no firstname) 2`] = `Array []`;

exports[`register -- POST /register do not register (no lastname) 1`] = `
Object {
  "body": Object {
    "error": "api.register lastname is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (no lastname) 2`] = `Array []`;

exports[`register -- POST /register do not register (no nickname) 1`] = `
Object {
  "body": Object {
    "error": "api.register nickname is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (no nickname) 2`] = `Array []`;

exports[`register -- POST /register do not register (no password) 1`] = `
Object {
  "body": Object {
    "error": "api.register password is_not_valid",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (no password) 2`] = `Array []`;

exports[`register -- POST /register do not register (query fail on insert but errno != 1062) 1`] = `
Object {
  "body": Object {
    "error": "Error: AN ERROR OCCURED",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (sendMail failed) 1`] = `
Object {
  "body": Object {
    "error": "api.register sendMail failed",
  },
  "status": 400,
}
`;

exports[`register -- POST /register do not register (sendMail failed) 2`] = `Array []`;

exports[`register -- POST /register do register 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`register -- POST /register do register 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`register -- POST /register do register 3`] = `
Array [
  RowDataPacket {
    "creation_date": 1000000000000,
    "id": 1,
    "token": "0000000000000000000000000000000000000001",
    "user_id": 1,
  },
]
`;
